# mvckivy

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
src/mvckivy/: __init__.py
src/mvckivy/app/: __init__.py  app.py  kivy_school.py  screen_registrator.py  screens_schema.py
src/mvckivy/base_mvc/: __init__.py  base_app_controller.py  base_model.py  (+6 more)
test/: test_swap_card_interaction.py
test/alias_test/: alias_call_pos.py  alias_call_test.py  chain_bind_alias_test.py  probe.kv  unbind_kv_reimplemented_func.py
test/bottom_swipe_tabs_test/: test_bottom_tabs.py
test/dialog_test/: main.kv  main.py
test/dialog_with_text_field_test/: main.py  md3_guidelines_lists.py  md3_guidelines_text_field.py  md_dialog.kv
test/expand_anim_test/: main.py
test/hotreload_test/: main.py
test/icon_button_test/: main.py  smoke.py
test/instance_tracker_test/: instance_tracker_mixin.py
test/keyboard_input_test/: main.py
test/kivy_school_android_hot_reload_test/: kivy_school.py
test/label_test/: main.kv  main.py  test_label.py
test/layout_test/: demo.kv  main.py  on_kv_post_test.py
test/lists_test/: button_main.py  main.py  md_list.kv  mkv_list.kv  mkv_list.py
test/mddialog_scatter_test/: main.py  md_dialog.kv
test/mdlist_scatter_test/: button_main.py  main.py  md_list.kv  mkv_list.py
test/mkvdialog_test/: main.kv  main.py  mkv_dialog.kv  mkv_dialog.py
test/mkvlabel_test/: mkvlabel_test.py
test/mkvsettings_test/: mkvsettings_test.kv  mkvsettings_test.py
test/mkvspeeddial_test/: mkvspeeddial.kv  mkvspeeddial.py
test/mtd_behavior_test/: main.py
test/navigation_rail_test/: main.kv  main.py
test/null_dispatcher_test/: const_null_dispatcher.py  null_dispatcher.py
test/probe_test/: main.py  probe.kv
test/project_generator_test/: generator.py
test/properties_test/: dynamic_rebind_in_kv.py  ext_alias_prop_test.py  func_alt.py  kv_dedupe_with_const_test.py  main.py  test_kv_dedupe_override.py  unbind_kv_reimplemented_func.py
test/responsive_behavior_test/: main.py  responsive_list.py  root_behavior.py
test/screens_schema_test/: test_kv_path_normalization.py
test/segmented_button_test/: main.py
test/settings_test/: main.py  testagroflow.ini
test/speed_dial_test/: main.py  speeddial.kv
test/swap_card_test/: main.py  menu.kv  menu.py  run_visual_test.py
test/tabs_test/: main.kv  main.py
test/telemetry_card_test/: main.py  telemetry_card.kv
test/text_field_test/: main.py  textfield.kv
test/widget_name_test/: test_tabs.py
(+157 files in other folders)
